--- a/web/themes/custom/nrgi/assets/src/scss/components/header.scss
+++ b/web/themes/custom/nrgi/assets/src/scss/components/header.scss
@@ -48,13 +48,7 @@
   }
 
   &__logo-link {
-    display    : inline-flex;
-    transition : color 0.3s;
-
-    &:hover,
-    &:focus {
-      color : $blue-light;
-    }
+    display : inline-flex;
   }
 
   /* Secondary-menu
