--- a/web/themes/custom/nrgi/assets/src/scss/components/quote.scss
+++ b/web/themes/custom/nrgi/assets/src/scss/components/quote.scss
@@ -19,6 +19,13 @@
     &:after {
       content : "”";
     }
+
+    .rtl & {
+      &:before,
+      &:after {
+        display : none;
+      }
+    }
   }
 
   &__caption {
